# gitpage

./: .dockerignore  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  Dockerfile.base  Dockerfile.md  LICENSE  README.md  alicessh.sh  alicessh.sh.md  build_docker.sh  build_docker.sh.md  config.toml  entrypoint.sh  entrypoint.sh.md  run.sh  run.sh.md  run_docker.sh  run_docker.sh.md  seed.sh  seed.sh.md  session-ses_126d.md  test.sh  test.sh.md  test_all.sh  test_docker.sh  test_docker.sh.md  test_docker_mode.sh  test_docker_mode.sh.md
_doc/: alicelog.md  api.md  dockerQA.md  plan.md  test_plan.md  todo.md  todo0.x.md  todo1.x.md  todo2.x.md  v0.1.md  v0.2.md  v0.3.md  v0.4.md  v0.5.md  v0.6.md  v0.7.md  v0.8.md  v0.9.md  v1.0.1.md  v1.0.md  v1.1.md  v1.2.md  v1.3.md  v2.0.md  v2.1.md  v2.2.md
_wiki/: aes-256-gcm.md  apperror-pattern.md  argon2.md  auto-deploy.md  axum.md  bollard.md  docker-runtime.md  git-http-smart-protocol.md  index.md  jwt-auth.md  libgit2.md  log.md  nonce-management.md  onceLock-init.md  owner-resolution.md  partial-index.md  process-vs-docker.md  pulldown-cmark.md  react-typescript.md  reverse-proxy-app.md  revwalk.md  rusqlite.md  spa-fallback.md  ssh-chroot.md  staging-area.md  three-way-merge.md  vite-proxy.md  wal-mode.md
data/: gitpage.db  gitpage.db-shm  gitpage.db-wal
frontend/: index.html  package-lock.json  package.json  vite.config.ts
migrations/: init.sql
src/: README.md  app.md  app.rs  config.md  config.rs  deploy.md  deploy.rs  docker.md  docker.rs  main.md  main.rs  ssh.md  ssh.rs
static/: index.html
test/: 01-auth.sh  (+16 more)
(+235 files in other folders)
