[package]
name = "gitpage"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "fs", "compression-gzip"] }
tower = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
git2 = "0.19"
pulldown-cmark = "0.11"
regex = "1"
jsonwebtoken = "9"
argon2 = "0.5"
rand = "0.8"
aes-gcm = "0.10"
sha2 = "0.10"
hex = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
mime_guess = "2"
toml = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
bollard = "0.21"
futures-util = "0.3"
